--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -1,16 +1,34 @@
-<h1>weather-app</h1>
-<div *ngIf="isLoading$ | async">...Loading</div>
-<div *ngIf="error$ | async">{{error$ | async}}</div>
-<form [formGroup] = "citySelectionForm">
-  <label>Select a City</label>
-  <select formControlName="cityName">
-    <option *ngFor="let city of cities$ | async" [ngValue]="city">{{city}}</option>
-  </select>
-</form>
-<div *ngIf="(weather$ | async) as selectedWeatherObservable">
-  <app-items
-    [title]="selectedWeatherObservable.city.name"
-    [subtitle]="selectedWeatherObservable.city.country"
-    [data]="selectedWeatherObservable.list"
-  ></app-items>
+<div *ngIf="isLoading$ | async" class="d-flex justify-content-center align-items-center weather-app-spinner">
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+<div class="bg-light">
+  <div class="container">
+    <div class="row p-2">
+      <div class="col">
+        <h1 class="weather-app-header">weather-app</h1>
+      </div>
+      <div class="col ">
+        <form [formGroup] = "citySelectionForm" class="d-flex align-items-center weather-app-form justify-content-end">
+          <label class="weather-app-label">Select a City</label>
+          <select formControlName="cityName" class="form-select weather-app-select" aria-label="select city">
+            <option *ngFor="let city of cities$ | async" [ngValue]="city">{{city}}</option>
+          </select>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div *ngIf="error$ | async" class="weather-app-info">{{error$ | async}}</div>
+</div>
+<div class="container">
+  <div *ngIf="(weather$ | async) as selectedWeatherObservable">
+    <app-items
+      [title]="selectedWeatherObservable.city.name"
+      [subtitle]="selectedWeatherObservable.city.country"
+      [data]="selectedWeatherObservable.list"
+    ></app-items>
+  </div>
 </div>
