--- a/weather-app/src/styles.scss
+++ b/weather-app/src/styles.scss
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+.weather-app {
+
+  &-header {
+    min-width: fit-content;
+    white-space: nowrap;
+  }
+
+  &-spinner {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgba(0, 0, 0, .1);
+  }
+
+  &-label{
+    min-width: fit-content;
+    white-space: nowrap;
+    padding-right: 20px;
+  }
+
+  &-select{
+    min-width: 150px;
+    max-width: 300px;
+  }
+
+  &-form {
+    height: 100%;
+  }
+
+  &-info {
+    text-align: center;
+    --bd-callout-bg: rgba(var(--bs-info-rgb), .075);
+    --bd-callout-border: rgba(var(--bs-info-rgb), .5);
+    padding: 1.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    background-color: var(--bd-callout-bg, var(--bs-gray-100));
+    border-left: 0.25rem solid var(--bd-callout-border, var(--bs-gray-300));
+  }
+
+  &-icon {
+    width: 60px;
+  }
+
+  &-center {
+    text-align: center;
+  }
+
+  &-cards {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &-card {
+    width: 16rem;
+    margin: 1rem;
+  }
+}
